# qaoa-school-timetable

./: README.md  analysis.py  bra.py  cec-instance.py  clean.py  den-aux.py  den.py  hstt_solver.py  instance-bra.py  instance-cec.py  instance-den-aux.py  instance-den.py  instance-min.py  min.py  output.out  pyproject.toml  qubo.py  random_distribution.py  school-timetable-analysis.py  school-timetable-ket_dump.py  school-timetable-remote.py  school-timetable.ipynb  school-timetable.py  solutions.csv  solver.ipynb  test-sequence-cec.sh  test-sequence-den.sh  test.out  test.py  xml-parser.py  xml_parser.py
dataset/: Brazil-Instance2.xml  Denmark-SmallSchool.xml  Toy_Model.xml  den-smallschool.xml
ket/: data-table-results.txt  output-short.txt  qaoa_maxcut.py  qaoa_min-graph-coloring.py  qaoa_min-graph-coloring_edit.py  school-timetable-ket.py  school-timetable-ket_edit.py  school-timetable.py  shor.py  test.py
old/: instance-den.py  instance-min.py  minimal.py  random_distribution.py
outputs/: analysis-cec-p1-sigma1.out  analysis-cec-p1-sigma2.out  analysis-den-4-25.out  analysis-den-4-4.out  analysis-den-5-25.out  analysis-den-5-4.out  cec-p1-sigma1.out  cec-p1-sigma2.out  cec-p2-sigma2.out  den-4-25.out  den-4-4.out  den-5-25.out  den-5-4.out  random.out  random2.out
qaoa/: __init__.py  cobyla.py  qaoa.py  util.py
qaoa_aux/: __init__.py  cobyla.py  qaoa.py  util.py  xml_parser.py
results/: CECp1.csv  CECp2.csv  Denp1.csv  Denp2.csv  Min1.csv  Minp1.csv  objfun.csv  p1.csv
results/cma/: CECp8.csv
timing/: DenAux_1_0.txt  Min_1_0.txt  Min_2_0.txt
